--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,26 @@
 *{
     margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
+body{
+    
+    height: 100vh;
+    width: 100%;
+}
+
+.container{
+    height: 100%;
+    width: 100%;
+    background: linear-gradient(180deg,#311847 15%,#A01A7D,#d3395d,#EF5D60);
+    display: grid;
+    place-items: center;
+    & .tarjeta{
+        height: 400px;
+        width: 50%;
+        background-color: #858585;
+        border-radius: 20px;
+        padding: 10px;
+        box-shadow: 10px 10px 10px -5px black;
+    }
 }
