--- a/css/style.css
+++ b/css/style.css
@@ -2,9 +2,9 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
+    list-style: none;
 }
 body{
-    
     height: 100vh;
     width: 100%;
 }
@@ -23,30 +23,53 @@ body{
 .container{
     height: 100%;
     width: 100%;
-    background: linear-gradient(180deg,#311847 15%,#A01A7D,#d3395d,#EF5D60);
+    background: linear-gradient(180deg,#1f1f1f ,#115372 15%,#03a1b6,#1f1f1f);
     display: grid;
     place-items: center;
     & .tarjeta{
         height: 600px;
         width: 50%;
         max-width: 350px;
-        background-color: #acacac;
+        background-color: #f1f1f1;
         border-radius: 20px;
         padding: 10px;
         box-shadow: 10px 10px 10px -5px black;
         & .header{
             height: 100px;
             width: 100%;
-            background-color: #EF5D60;
+            background-color: #1f1f1f;
+            color: #f1f1f1;
             border-radius: 10px 10px 0 0;
             padding: 10px;
+            /* display: flex;
+            align-items: center;
+            justify-content: center; */
+            & .img{
+                height: 130%;
+                object-fit: cover;
+            }
+            & .right{
+                right: 0;
+            }
         }
-        & .precio{
+        & .producto{
             height: 200px;
             width: 100%;
-            background-color: #d3395d;
+            background-color: #f1f1f1;
             padding: 10px;
-
+            display: flex;
+            justify-content: space-between;
+            align-items: center;
+            flex-direction: column;
+            gap: 5px;
+            font-family: sans-serif;
+            & .precio{
+                font-size: 30px;
+            }
+            & span{
+                font-family: Impact;
+                font-size: 24px;
+            }
             & ul.sel_color{
                 display: flex;
                 justify-content: center;
@@ -56,26 +79,72 @@ body{
                     width: 20px;
                     border-radius: 50%;
                     list-style: none;
-
+                }
+            }
+            & ul.talles{
+                display: flex;
+                width: 80%;
+                justify-content: space-between;
+                & li{
+                    border: solid 1px grey;
+                    width:30px;
+                    height:30px;
+                    border-radius:50%;
+                    display: grid;
+                    place-items: center;
                 }
                 & li:hover{
-                    transform: scale(1.5);
+                    transition: 0.4s;
+                    background-color: #1f1f1f;
+                    color: #f1f1f1;
+                    font-weight: bolder;
                     cursor: pointer;
+                    transform: scale(1.2);
                 }
             }
         }
         & .desc_product{
             height: 150px;
             width: 100%;
-            background-color: #A01A7D;
+            background-color: #d8d8d8;
             padding: 10px;
+            color: #1f1f1f;
+            display: flex;
+            flex-direction: column;
+            justify-content: space-between;
         }
         & .bottom{
             height: 130px;
             width: 100%;
-            background-color: #311847;
+            background-color: #1f1f1f;
+            color: #f1f1f1;
             padding: 10px;
             border-radius: 0 0 10px 10px;
+            display: grid;
+            place-items: center;
+            & button{
+                padding: 5px 25px;
+                border:0;
+                border-radius: 20px;
+                background-color: #03a1b6;
+                font-size: 125%;
+                transition: all 0.5s ease-in-out;
+            }
+            & button:hover{
+                transform: scale(1.05);
+                cursor: pointer;
+                background-color: #f1f1f1;
+                color: #1f1f1f;
+            }
         }
+    }
+}
+.flex{
+    display: flex;
+    justify-content: space-between;
+}
+@media screen and (orientation=portrait){
+    .container{
+        background:linear-gradient(180deg,#1f1f1f ,#03a1b6);
     }
 }
