--- a/css/style.css
+++ b/css/style.css
@@ -3,6 +3,7 @@
     padding: 0;
     box-sizing: border-box;
     list-style: none;
+    
 }
 body{
     height: 100vh;
@@ -23,11 +24,11 @@ body{
 .container{
     height: 100%;
     width: 100%;
-    background: linear-gradient(180deg,#1f1f1f ,#115372 15%,#03a1b6,#1f1f1f);
+    background: linear-gradient(180deg,#ff3a3a ,#a3740d 15%,#e98605,#a31919);
     display: grid;
     place-items: center;
     & .tarjeta{
-        height: 600px;
+        height: 600px auto;
         width: 50%;
         max-width: 350px;
         background-color: #f1f1f1;
@@ -35,25 +36,36 @@ body{
         padding: 10px;
         box-shadow: 10px 10px 10px -5px black;
         & .header{
+            position: relative;
             height: 100px;
             width: 100%;
             background-color: #1f1f1f;
             color: #f1f1f1;
             border-radius: 10px 10px 0 0;
-            padding: 10px;
-            /* display: flex;
-            align-items: center;
-            justify-content: center; */
-            & .img{
-                height: 130%;
-                object-fit: cover;
+            overflow: hidden;
+            transition: all 1s ease-out;
+            & .imagenProd{
+                position: absolute;
+                width: 100%;
+                left: 0;
+                top: 0;
+                z-index: 0;
+                opacity: 0.7;
             }
-            & .right{
-                right: 0;
+            & .iconos{
+                color: #1f1f1f;
+                position: absolute;
+                height: 10px;
+                width: 100%;
+                z-index: 10;
+                padding: 10px;
             }
         }
-        & .producto{
+        & .header:hover{
             height: 200px;
+        }
+        & .producto{
+            height: 200px auto;
             width: 100%;
             background-color: #f1f1f1;
             padding: 10px;
@@ -69,6 +81,8 @@ body{
             & span{
                 font-family: Impact;
                 font-size: 24px;
+                text-wrap: balance;
+                text-align: center;
             }
             & ul.sel_color{
                 display: flex;
@@ -80,13 +94,16 @@ body{
                     border-radius: 50%;
                     list-style: none;
                 }
+                & li:hover{
+                    transform: scale(1.3);
+                }
             }
             & ul.talles{
                 display: flex;
                 width: 80%;
                 justify-content: space-between;
                 & li{
-                    border: solid 1px grey;
+                    border: solid 1px rgb(88, 88, 88);
                     width:30px;
                     height:30px;
                     border-radius:50%;
@@ -106,9 +123,9 @@ body{
         & .desc_product{
             height: 150px;
             width: 100%;
-            background-color: #d8d8d8;
+            background-color: #1f1f1f;
             padding: 10px;
-            color: #1f1f1f;
+            color: #f1f1f1;
             display: flex;
             flex-direction: column;
             justify-content: space-between;
@@ -145,6 +162,6 @@ body{
 }
 @media screen and (orientation=portrait){
     .container{
-        background:linear-gradient(180deg,#1f1f1f ,#03a1b6);
+        background:linear-gradient(180deg,#fa2828 ,#e49c00);
     }
 }
