--- a/css/style.css
+++ b/css/style.css
@@ -3,7 +3,7 @@
     padding: 0;
     box-sizing: border-box;
     list-style: none;
-    
+    transition: all 1s ease-out;
 }
 body{
     height: 100vh;
@@ -13,7 +13,7 @@ body{
     background-color: black;
 }
 .blanco{
-    background-color: white;
+    background-color: rgb(221, 219, 219);
 }
 .rojo{
     background-color: red;
@@ -31,6 +31,7 @@ body{
         height: 600px auto;
         width: 50%;
         max-width: 350px;
+        min-width: 300px;
         background-color: #f1f1f1;
         border-radius: 20px;
         padding: 10px;
@@ -39,11 +40,11 @@ body{
             position: relative;
             height: 100px;
             width: 100%;
-            background-color: #1f1f1f;
+            background-color: #b6b4b4;
             color: #f1f1f1;
             border-radius: 10px 10px 0 0;
             overflow: hidden;
-            transition: all 1s ease-out;
+            
             & .imagenProd{
                 position: absolute;
                 width: 100%;
@@ -62,7 +63,16 @@ body{
             }
         }
         & .header:hover{
-            height: 200px;
+            
+            overflow: visible;
+            height: 120px;
+            & .imagenProd{
+                top: 35px;
+                opacity: 1;
+                z-index: 10;
+                border-radius: 14px;
+                
+            }
         }
         & .producto{
             height: 200px auto;
@@ -128,7 +138,6 @@ body{
             color: #f1f1f1;
             display: flex;
             flex-direction: column;
-            justify-content: space-between;
         }
         & .bottom{
             height: 130px;
