--- a/css/style.css
+++ b/css/style.css
@@ -1,33 +1,40 @@
-*{
+* {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
     list-style: none;
     transition: all 1s ease-out;
 }
-body{
+
+body {
     height: 100vh;
     width: 100%;
 }
-.negro{
+
+.negro {
     background-color: black;
 }
-.blanco{
+
+.blanco {
     background-color: rgb(221, 219, 219);
 }
-.rojo{
+
+.rojo {
     background-color: red;
 }
-.violeta{
+
+.violeta {
     background-color: indigo;
 }
-.container{
+
+.container {
     height: 100%;
     width: 100%;
-    background: linear-gradient(180deg,#ff3a3a ,#a3740d 15%,#e98605,#a31919);
+    background: linear-gradient(180deg, #ff3a3a, #a3740d 15%, #e98605, #a31919);
     display: grid;
     place-items: center;
-    & .tarjeta{
+
+    & .tarjeta {
         height: 600px auto;
         width: 50%;
         max-width: 350px;
@@ -36,7 +43,8 @@ body{
         border-radius: 20px;
         padding: 10px;
         box-shadow: 10px 10px 10px -5px black;
-        & .header{
+
+        & .header {
             position: relative;
             height: 100px;
             width: 100%;
@@ -44,8 +52,8 @@ body{
             color: #f1f1f1;
             border-radius: 10px 10px 0 0;
             overflow: hidden;
-            
-            & .imagenProd{
+
+            & .imagenProd {
                 position: absolute;
                 width: 100%;
                 left: 0;
@@ -53,28 +61,34 @@ body{
                 z-index: 0;
                 opacity: 0.5;
             }
-            & .iconos{
+
+            & .iconos {
                 color: #1f1f1f;
                 position: absolute;
                 height: 10px;
                 width: 100%;
                 z-index: 10;
                 padding: 10px;
+
+                & i:hover {
+                    transform: scale(1.3);
+                    cursor: pointer;
+                    color: white;
+                }
             }
         }
-        & .header:hover{
-            
+        & .header:hover {
             overflow: visible;
             height: 120px;
-            & .imagenProd{
+
+            & .imagenProd {
                 top: 35px;
                 opacity: 1;
                 z-index: 10;
                 border-radius: 14px;
-                
             }
         }
-        & .producto{
+        & .producto {
             height: 200px auto;
             width: 100%;
             background-color: #f1f1f1;
@@ -85,42 +99,50 @@ body{
             flex-direction: column;
             gap: 5px;
             font-family: sans-serif;
-            & .precio{
+
+            & .precio {
                 font-size: 30px;
             }
-            & span{
+
+            & span {
                 font-family: Impact;
                 font-size: 24px;
                 text-wrap: balance;
                 text-align: center;
             }
-            & ul.sel_color{
+
+            & ul.sel_color {
                 display: flex;
                 justify-content: center;
                 gap: 10px;
-                & li{
+
+                & li {
                     height: 20px;
                     width: 20px;
                     border-radius: 50%;
                     list-style: none;
                 }
-                & li:hover{
+
+                & li:hover {
                     transform: scale(1.3);
                 }
             }
-            & ul.talles{
+
+            & ul.talles {
                 display: flex;
                 width: 80%;
                 justify-content: space-between;
-                & li{
+
+                & li {
                     border: solid 1px rgb(88, 88, 88);
-                    width:30px;
-                    height:30px;
-                    border-radius:50%;
+                    width: 30px;
+                    height: 30px;
+                    border-radius: 50%;
                     display: grid;
                     place-items: center;
                 }
-                & li:hover{
+
+                & li:hover {
                     transition: 0.4s;
                     background-color: #1f1f1f;
                     color: #f1f1f1;
@@ -130,7 +152,8 @@ body{
                 }
             }
         }
-        & .desc_product{
+
+        & .desc_product {
             height: 150px;
             width: 100%;
             background-color: #1f1f1f;
@@ -139,7 +162,8 @@ body{
             display: flex;
             flex-direction: column;
         }
-        & .bottom{
+
+        & .bottom {
             height: 130px;
             width: 100%;
             background-color: #1f1f1f;
@@ -148,15 +172,17 @@ body{
             border-radius: 0 0 10px 10px;
             display: grid;
             place-items: center;
-            & button{
+
+            & button {
                 padding: 5px 25px;
-                border:0;
+                border: 0;
                 border-radius: 20px;
                 background-color: #03a1b6;
                 font-size: 125%;
                 transition: all 0.5s ease-in-out;
             }
-            & button:hover{
+
+            & button:hover {
                 transform: scale(1.05);
                 cursor: pointer;
                 background-color: #f1f1f1;
@@ -165,12 +191,8 @@ body{
         }
     }
 }
-.flex{
+
+.flex {
     display: flex;
     justify-content: space-between;
-}
-@media screen and (orientation=portrait){
-    .container{
-        background:linear-gradient(180deg,#fa2828 ,#e49c00);
-    }
 }
